# downy_py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
core/: dowloader.py  downloader.py
downy/: __init__.py  __main__.py  config.py
downy/core/: downloader.py
downy/ui/: prompts.py
ui/: display.py  prompts.py
